# scripty

./: .gitignore  .taplo.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  dprint.json  package-lock.json  release-checklist.md
.github/: pull_request_template.md  release-template.md
.github/workflows/: ci.yml
examples/: 00_basic.rs  01_simple_pipes.rs  02_pipe_modes.rs  03_read_ext.rs  04_run_with_io.rs  05_spawn_io.rs
src/: color.rs  fs.rs  io_ext.rs  lib.rs  output.rs  style.rs
src/cmd/: command.rs  error.rs  macros.rs  mod.rs  pipeline.rs  types.rs
src/cmd/tests/: basic.rs  environment.rs  error_handling.rs  io_patterns.rs  mod.rs  no_echo.rs  pipeline.rs  quoting.rs  run_output_verification.rs  write_methods.rs
xtask/: Cargo.toml
xtask/src/: main.rs
