[workspace]
members = [".", "xtask"]

[package]
name = "scripty"
version = "0.3.2"
edition = "2024"
rust-version = "1.87.0"
authors = ["Hidehiko Zasu <hidehiko.zasu.zzz@gmail.com>"]
license = "MIT"
description = "Scripty - your Rust command toolkit for easy command execution and file operations"
repository = "https://github.com/h-zasu/scripty"
homepage = "https://github.com/h-zasu/scripty"
categories = ["command-line-interface", "command-line-utilities", "development-tools", "filesystem"]
keywords = ["shell", "command", "pipeline", "scripting", "cli"]
readme = "README.md"

[dependencies]
anstyle = "1.0.7"

[dev-dependencies]
ansi-to-html = "0.2.1"
cargo-readme = "3.3.1"
serial_test = "3.0"

# Focused examples showcasing scripty's core strengths: pipelines and I/O
# Examples are numbered for optimal learning progression

[[example]]
name = "00_basic"
path = "examples/00_basic.rs"
[[example]]
name = "01_simple_pipes"
path = "examples/01_simple_pipes.rs"
[[example]]
name = "02_pipe_modes"
path = "examples/02_pipe_modes.rs"
[[example]]
name = "03_read_ext"
path = "examples/03_read_ext.rs"
[[example]]
name = "04_run_with_io"
path = "examples/04_run_with_io.rs"
[[example]]
name = "05_spawn_io"
path = "examples/05_spawn_io.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.readme]
readme-path = "README.md"
